manifests/billing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
      - name: app
        # ЗАМЕНИТЕ НА ВАШ LOG-IN В DOCKER HUB:
        image: your-dockerhub-username/billing-service:latest 
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: homework
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: billing-service
