manifests/notifications.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: homework
spec:
  selector:
    app: user-service
  ports:
  - port: 8000
    targetPort: 8000
