manifests/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
      - name: app
        # ЗАМЕНИТЕ НА ВАШ LOG-IN В DOCKER HUB:
        image: your-dockerhub-username/orders-service:latest 
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: homework
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: orders-service
